roboshop-v1/catalogue.yml
---
apiVersion: v1
kind: Service
metadata:
  name: catalogue
spec:
  selector:
    appName: catalogue
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
