roboshop-v1/shipping.yml
apiVersion: v1
kind: Service
metadata:
  name: shipping
  namespace: roboshop
spec:
  selector:
    appName: shipping
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Pod
metadata:
  name: shipping
  namespace: roboshop
  labels:
    appName: shipping
spec:
  containers:
    - name: shipping
      image: public.ecr.aws/w8x4g9h7/roboshop-v3/shipping
