roboshop-v1/01-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: block-all-network
  namespace: roboshop
spec:
  policyTypes:
    - Ingress
    - Egress
